<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xinmang.feedbackproject.FeedBackActivity">

    <ImageView
        android:id="@+id/back_ground_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
       />

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:background="?android:attr/selectableItemBackground"
            android:padding="20dp"
           />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sugesstion_feedback"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/remind_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sugesstion"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_white">

            <EditText
                android:id="@+id/feed_back_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/input_hint"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:textColorHint="@color/input_hint"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_white"
            android:hint="@string/phoone_hint"
            android:padding="10dp"
            android:textColor="@color/input_hint"
            android:textColorHint="@color/input_hint"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sumbit_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/submit"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:id="@+id/contact_us_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/answer_us"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/qq_ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/qq_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />

                <TextView
                    android:id="@+id/qq_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/qq_answer"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/send_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/email_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/send_eamil"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
